--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         I'm a full-stack engineering leader and software development efficiency aficionado.
       </p>
       <p>
-        I'm currently building <a href="https://sloika.xyz" target="_blank" rel="noopener noreferrer">📸 sloika.xyz</a> — an NFT marketplace for photography.<br />
+        I'm currently building 📸 Sloika — a photography marketplace and community.<br />
         You can find me on <a href="https://github.com/freeatnet" target="_blank" rel="noopener noreferrer">GitHub</a> and <a href="https://twitter.com/freeatnet" target="_blank" rel="noopener noreferrer">Twitter</a>.
       </p>
     </article>
